# audio-howling-suppression

./: .gitattributes  .gitignore  AnnotationRules.md  CLAUDE.md  LICENSE  README.md  U-Net深度解析报告.md  learningskill.md  pyproject.toml  requirements.txt  run_experiment.py  test_improvements_four_five.py  test_improvements_six_seven.py  test_models.py  unet改进.md  项目文档.md
.claude/: settings.local.json
configs/: README.md  unet_v1.yaml  unet_v10_gan.yaml  unet_v11_multiscale.yaml  unet_v12_pyramid.yaml  unet_v13_fpn.yaml  unet_v14_mixed_precision.yaml  unet_v15_curriculum.yaml  unet_v16_lr_scheduler.yaml  unet_v2.yaml  unet_v3_attention.yaml  unet_v4_residual.yaml  unet_v5_dilated.yaml  unet_v6_optimized.yaml  unet_v7_lstm.yaml  unet_v8_temporal_attention.yaml  unet_v9_convlstm.yaml
docs/: README.md  模型改进实施总结.md  毕业设计改进建议.md  项目文档.md
scripts/: README.md  compare_models.py  inference.py  run_experiment.py  test_models.py  update_model_comments.py
src/: config.py  dataset.py  evaluate.py  train.py
src/evaluation/: README.md  __init__.py  benchmark.py  comparator.py  example_usage.py  metrics.py  test_runner.py  visualizer.py
src/models/: CNN.py  RNN.py  __init__.py  attention_modules.py  augmentation.py  loss_functions.py  post_processing.py  temporal_modules.py  training_strategies.py  unet_v1.py  unet_v10_gan.py  unet_v11_multiscale.py  unet_v12_pyramid.py  unet_v13_fpn.py  unet_v2.py  unet_v3_attention.py  unet_v4_residual.py  unet_v5_dilated.py  unet_v6_optimized.py  unet_v7_lstm.py  unet_v8_temporal_attention.py  unet_v9_convlstm.py
src/traditional/: README.md  __init__.py  adaptive_feedback.py  frequency_shift.py  gain_suppression.py
tests/: README.md  run_tests.py
tests/integration/: quick_test.py  test_evaluation.py
tests/unit/: test_traditional.py
文档资料/: 开题答辩_啸叫抑制.pptx  文献综述.docx  附件2.开题报告会议纪要套表_司宇鑫.docx
